# popidea

./: .gitignore  README.md  README.zh.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: ai_text_commands.rs  asset_commands.rs  commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/ai/: client.rs  mod.rs  providers.rs
src-tauri/src/ai/providers/: anthropic.rs  openai.rs
src-tauri/src/api/: mod.rs  routes.rs  server.rs
src-tauri/src/api/routes/: projects.rs
src-tauri/src/db/: asset_crud.rs  crud.rs  migrations.rs  mod.rs  models.rs  pool.rs
src-tauri/src/lib/: mod.rs
src-tauri/src/lib/api/: mod.rs
src-tauri/src/lib/db/: crud.rs  mod.rs  models.rs  pool.rs
src-tauri/src/lib/ipc/: mod.rs
src-tauri/src/lib/task/: mod.rs  queue.rs  worker.rs
src-tauri/src/task/: handlers.rs  mod.rs  queue.rs  worker.rs
src-tauri/src/task/handlers/: image.rs  text.rs  video.rs  voice.rs
src/api/: AssetsApi.ts  ai-text.ts  assets.ts  characters.ts  client.ts  episodes.ts  index.ts  projects.ts  storyboards.ts  tasks.ts
src/components/: TextEditor.tsx
src/components/layout/: Card.tsx  PageContent.tsx  index.ts
src/pages/: AssetsPage.tsx  HomePage.tsx  ProjectDetail.tsx  ProjectList.tsx  TaskMonitor.tsx  index.ts
src/types/: assets.ts  index.ts
